--- a/css/home.css
+++ b/css/home.css
@@ -8,57 +8,39 @@ a {
     color: #000;
 }
 
-.headerRight {
-    color: #000;
-    margin-right: 20px;
-    font-family: "source-han-serif-jp-variable", sans-serif;
-    font-variation-settings: "wght" 350;
-}
-
-.key {
-    font-size: 15px;
-    padding: 5px 15px;
-    display: inline-block;
-}
-
 .swf {
     height: 458px;
     margin: auto;
     position: relative;
-    background-color: #333;
 }
 
-
-@media (max-width: 768px) {
+.swf .carousel-item {
+    position: relative;
+    width: 100%;
+    height: 458px;
 }
 
-.swfNews {
+.carousel-item video {
+    object-fit: cover;
+    height: 100%;
+    width: 100%;
+}
+
+.swfshop {
     position: absolute;
     right: 0;
     bottom: 0;
-    width: 500px;
+    width: 250px;
     padding: 20px 15px;
-    background-color: #fff;
+    background-color: #333;
     box-sizing: border-box;
     border-top-left-radius: 15px;
+    color: #fff;
+    text-align: center;
 }
 
-.swfNewsNews {
-    font-size: 15px;
-    width: 12%;
-    float: left;
-    color: #a7384b;
-    line-height: 21px;
-}
-
-.swfNewsDate {
-    width: 20%;
-    float: left;
-}
-
-.swfNewsTitle {
-    width: 66%;
-    float: right;
+.swfTitle {
+    font-size: 20px;
 }
 
 .more {
@@ -72,7 +54,6 @@ a {
     padding: 50px 0px;
 }
 
-
 .top002Line {
     width: 50px;
     border-bottom: 2px solid #a7384b;
@@ -82,6 +63,19 @@ a {
     box-shadow: 0 8px 22px rgba(0, 0, 0, 0.2);
     background-color: #fff;
     padding: 25px;
+}
+
+.fortune-telling {
+    width: 300px;
+    border: solid 1px #a7384b;
+    text-align: center;
+    margin: auto;
+    padding: 15px 0px;
+    font-size: 30px;
+}
+
+.fortune-telling a {
+    color: #a7384b;
 }
 
 .top003Dzi {
@@ -96,38 +90,6 @@ a {
     font-size: 25px;
     font-family: "source-han-serif-jp-variable", sans-serif;
     font-variation-settings: "wght" 450;
-}
-
-.carousel-container {
-    position: relative;
-    width: 100%;
-    overflow: hidden;
-}
-
-.carousel-items {
-    display: flex;
-    transition: transform 0.5s ease-in-out;
-}
-
-.carousel-item {
-    width: 167px;  /* アイテムの幅 */
-    margin-right: 20px; /* アイテム間のスペース */
-}
-
-.carousel-item img {
-    width: 100%;
-    height: auto;
-}
-
-/* スライダーがアイテムを1つずつスライドするように設定 */
-.carousel-inner {
-    display: flex;
-    transition: transform 1s ease;
-}
-
-.carousel-inner .carousel-item {
-    flex: 0 0 auto;
-    width: 167px; /* 1アイテム分の幅 */
 }
 
 .top003Go {
@@ -312,13 +274,3 @@ footer {
     text-align: end;
     margin-right: 20px;
 }
-
-
-
-
-
-
-
-
-
-
