--- a/css/home.css
+++ b/css/home.css
@@ -16,7 +16,7 @@ a {
 }
 
 .navbar-brand img {
-    width: 100px;
+    width: 200px;
 }
 
 #navbarNavDropdown {
@@ -40,16 +40,9 @@ a {
     z-index: 1;   
 }
 
-.pc{
-    position: relative;
-    width: 100%;
-    height: 458px;
-}
-
 .swf video {
     object-fit: cover;
-    height: 100%;
-    width: 100%;
+    height: 458px;
 }
 
 .swfshop {
@@ -83,6 +76,14 @@ a {
     .swf video {
         height: 500px;
     }
+
+    .swfshop {
+        position: static;
+        width: 100%;
+        padding: 10px 15px;
+        border-top-left-radius: 0;
+        margin: 0 auto;
+    }
 }
 
 .swfText {
@@ -104,12 +105,11 @@ a {
     .top001 img {
         display: block;
         width: 100%;
-        height: 250px;
         margin: 10px 0;
     }
 }
 
-.top002 {
+.common, .top004 {
     position: relative;
     padding: 10px 0 30px;
 }
@@ -124,11 +124,8 @@ a {
     z-index: -1; 
 }
 
-.top002 .section-title {
-    color: #f7f7f7;
-}
-
 .section-title {
+    color: #f7f7f7;
     font-size: 50px;
 }
 
@@ -140,7 +137,7 @@ a {
 
 .ranking {
     display: block;
-    color: #4B0082;
+    color: #F0E6FA;
     margin: 0 0 5px 10px;
 }
 
@@ -189,7 +186,7 @@ a {
 }
 
 .top004Go {
-    width: 300px;
+    width: 90%;
     border: solid 1px #333;
     text-align: center;
     margin: auto;
@@ -204,22 +201,10 @@ footer {
 }
 
 .footerLogo img {
-    width: 150px;
+    width: 230px;
 }
 
 .footerSns {
     text-align: end;
     font-size: 40px;
-}
-
-.footerBtm {
-    background-color: #a7a7a7;
-    padding: 15px 0px;
-}
-
-.copy {
-    color: #fff;
-    font-size: 12px;
-    text-align: end;
-    margin-right: 20px;
 }
