--- a/css/common.css
+++ b/css/common.css
@@ -1,3 +1,16 @@
+.summary {
+    margin: 0 auto;
+    border: 2px solid #000;
+    padding: 20px;
+    max-width: 1000px;
+}
+
+.title {
+    font-size: 20px;
+    border-bottom: 2px solid #000;
+    margin-bottom: 10px;
+}
+
 #accordionTenju {
     max-width: 990px;
     margin: 0 auto;
@@ -25,6 +38,11 @@
 
     .subtitle {
         margin: 0;
-    }
-    
+    }   
+}
+
+.caption {
+    font-size: 20px;
+    font-weight: bold;
+    margin-bottom: 5px;
 }
