--- a/css/common.css
+++ b/css/common.css
@@ -16,6 +16,33 @@
     margin: 0 auto;
 }
 
+#accordionTenju .accordion-body {
+    display: flex;
+    padding: 30px 50px;
+    line-height: 1.8;
+    color: #000;
+    text-align: start;
+}
+
+.tenju-image-body {
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+    margin-right: 20px;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+}
+
+@media (max-width: 767px){
+    .accordion-body {
+        flex-direction: column;
+        padding: 15px 20px;
+    }
+    
+    .accordion-body img {
+        margin: 0 auto 20px;   
+    } 
+}
+
 .name {
     color: #7da5ba;
     font-size: 1.5rem;
@@ -45,4 +72,8 @@
     font-size: 20px;
     font-weight: bold;
     margin-bottom: 5px;
+}
+
+.formatted-text, .text {
+    font-size: 17px;
 }
